--- a/src/main.css
+++ b/src/main.css
@@ -464,7 +464,7 @@ h4 {
 }
 
 .drinkspage {
-  background: pink no-repeat;
+  background: #FFB6C1 no-repeat;
   background-size: cover;
   height: 100vh;
 }
